--- a/Handout/myNotes.cls
+++ b/Handout/myNotes.cls
@@ -90,8 +90,7 @@
 		\begin{center}
 		\textsc{\Large The OpenMS Developers}\\[1cm]
 		Mathias Walzer, Timo Sachsenberg, Fabian Aicheler,\\
-		George Rosenberger, Hannes Roest, \\
-		Marc Rurik, Stephan Aiche, Johannes Veit, \\ Knut Reinert, and Oliver Kohlbacher\\[2cm]
+		Marc Rurik, Johannes Veit, \\ Knut Reinert, and Oliver Kohlbacher\\[2cm]
 %                \textsc{\Large License}\\[1cm]
 \vfill
 		\textbf{Creative Commons Attribution 4.0 International (CC BY 4.0)}\\
