added fonts to document

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -14,8 +14,9 @@
 % UBUNTU FONT CAN BE DOWNLOADED FROM HERE: http://font.ubuntu.com
 %
 \usepackage{fontspec}
-\setmainfont{Ubuntu Light}
-\setmonofont{Ubuntu Mono}
+\setmainfont[Ligatures = TeX]{Ubuntu-R.ttf}
+\setmonofont[Ligatures = TeX]{Ubuntu-M.ttf}
+
 % math fonts
 %\usepackage[math-style=TeX]{unicode-math}
 %\setmathfont{Cambria Math}
@@ -40,7 +41,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newfontfamily{\menlo}{Menlo}
+\newfontfamily{\menlo}{Menlo-Regular.ttf}
 
 \usepackage{listings}
 \usepackage{color}
