- Added remove_unannotated option in decoy generation

--- a/Handout/openswath.tex
+++ b/Handout/openswath.tex
@@ -94,12 +94,12 @@ In addition to the target assays, OpenSWATH further requires decoy assays in the
   \item[Linux or Mac] \hfill \\
     On the Terminal:
     \begin{lstlisting}
-  OpenSwathDecoyGenerator -in OpenSWATH_SGS_AssayLibrary.TraML -out OpenSWATH_SGS_AssayLibrary_with_Decoys.TraML -method shuffle -append -exclude_similar
+  OpenSwathDecoyGenerator -in OpenSWATH_SGS_AssayLibrary.TraML -out OpenSWATH_SGS_AssayLibrary_with_Decoys.TraML -method shuffle -append -exclude_similar -remove_unannotated
   \end{lstlisting}
   \item[Windows] \hfill \\
     On the TOPP command line:
     \begin{lstlisting}
-  OpenSwathDecoyGenerator.exe -in OpenSWATH_SGS_AssayLibrary.TraML -out OpenSWATH_SGS_AssayLibrary_with_Decoys.TraML -method shuffle -append -exclude_similar
+  OpenSwathDecoyGenerator.exe -in OpenSWATH_SGS_AssayLibrary.TraML -out OpenSWATH_SGS_AssayLibrary_with_Decoys.TraML -method shuffle -append -exclude_similar -remove_unannotated
   \end{lstlisting}
 \end{description}
 
